--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "StefanPruzinsky/Stuff Framework",
+    "name": "StefanPruzinsky/Stuff-Framework",
     "description": "- just framework for object lovers -",
     "keywords": ["framework", "stuff"],
     "license": "MIT",
